<resources>
    <string name="app_name">RUCafeApp</string>
    <string name="order_details_activity">Your Order</string>
    <string name="order_coffee_activity">Order Coffee</string>
    <string name="order_donut_activity">Order Donuts</string>
    <string name="store_orders_activity">Store Orders</string>
    <string name="add_to_order_donut">Add to Order</string>
    <string name="add_to_order_coffee">Add to Order</string>
    <string name="milk">milk</string>
    <string name="caramel">caramel</string>
    <string name="cream">cream</string>
    <string name="subtotal_coffee">subtotal</string>
    <string name="select_quantity_donut">Select quantity</string>
    <string name="select_donut_flavor">Select Donut Flavor</string>
    <string name="subtotal_donut">subtotal</string>
    <string name="order_coffee_button">Order Coffee</string>
    <string name="store_orders">Store Orders</string>
    <string name="current_order">Current Order</string>
    <string name="welcome_to_ru_cafe">Welcome to RU Cafe!</string>
    <string name="todo">TODO</string>
    <string name="syrup">syrup</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="sales_tax_your_orders">sales tax</string>
    <string name="your_order">Your Order</string>
    <string name="place_the_order">Place the Order</string>
    <string name="total">total</string>
    <string name="image_view_your_order">TODO</string>
    <string name="subtotal_your_order">subtotal</string>
    <string name="store_orders_image_view">store orders image view</string>
    <string name="store_orders_text">Store Orders</string>
    <string name="coffee_image_view">coffee image view</string>
    <string name="donuts_image_view">donuts image view</string>
    <string name="coffee_added_to_order">Coffee added to order</string>
    <string name="donut_added_to_order">Donut added to order</string>
    <string name="order_has_been_placed">Order has been placed</string>
    <string name="item_removed">Item removed from cart</string>
    <string name="delete_order">Order Deleted</string>
    <string name="add_menuitems">Add some items to cart before placing order</string>
    <string name="ordertotal">OrderTotal</string>
    <string name="alert_title_item">Remove Item</string>
    <string name="alert_message_item">Item to be Removed?</string>
    <string name="alert_title_order">Remove Order</string>
    <string name="alert_message_order">Order to be removed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Short_Black_Price">1.99</string>
    <string name="Donut_Price">1.39</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="click_on_item_to_remove">Click on item to remove</string>
    <string name="click_on_order_to_remove">Click on order to remove</string>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="coffee_size">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
    <string-array name="donut_flavor">
        <item>jelly</item>
        <item>blueberry</item>
        <item>chocolate-frosted</item>
        <item>strawberry-frosted</item>
        <item>glazed</item>
        <item>jelly holes</item>
    </string-array>
</resources>