<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderingCoffeeActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="152dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="248dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/milk" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/caramel" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/cream" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:entries="@array/quantity"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="52dp"
        android:layout_marginTop="45dp"
        android:text="@string/subtotal_coffee"
        app:layout_constraintEnd_toEndOf="@+id/spinner2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner2"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_to_order_coffee"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>