<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".OrderingDonutsActivity">

    <Spinner
        android:id="@+id/donutFlavorSpinner"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:entries="@array/donut_flavor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/addToOrderDonut"
        android:layout_width="232dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:onClick="addToOrder"
        android:text="@string/add_to_order_donut"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

    <Spinner
        android:id="@+id/donutQuantitySpinner"
        android:layout_width="322dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:entries="@array/quantity"
        app:layout_constraintEnd_toEndOf="@+id/donutFlavorSpinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/donutFlavorSpinner"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="212dp"
        android:text="@string/select_donut_flavor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="46dp"
        android:text="@string/select_quantity_donut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutFlavorSpinner" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="195dp"
        android:layout_height="151dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/donuts_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donuts4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/donutQuantitySpinner"
        app:layout_constraintStart_toStartOf="@+id/donutQuantitySpinner"
        app:layout_constraintTop_toBottomOf="@+id/donutQuantitySpinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subtotalDonut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/subtotal_donut" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>