<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOrdersActivity">

    <ListView
        android:id="@+id/storeOrdersListView"
        android:layout_width="381dp"
        android:layout_height="464dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="117dp"
        android:layout_height="63dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:text="@string/store_orders_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="178dp"
        android:layout_height="152dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/store_orders_image_view"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/storeorders" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="156dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/click_on_order_to_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>